# apa-adversarial-paraphrasing-attack

./: ENVIRONMENTS.md  README.md  pyproject.toml  ray_worker_setup.py  sitecustomize.py
scripts/: run_qwen35_smoke_py312.sh  train_gsm8k.sh  train_gsm8k_lora.sh
src/: adversarial_reward.py  agent.py  eval.py  prepare_gsm8k_data.py  sitecustomize.py  train.py
src/tasks/: code_eval.py  execute.py  gsm8k.py  mbpp.py
verl/: __init__.py
verl/utils/: model.py
